name:                Cards
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/Cards#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Game.Cards.CardValue
                     , Game.Cards.CardSuit
                     , Game.Cards.Card
                     , Game.Cards.Hand
                     , Game.Cards.Combination
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite Cards-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Cards
                     , QuickCheck >= 2.4.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Cards
